--- a/client/package.json
+++ b/client/package.json
@@ -16,7 +16,7 @@
   "scripts": {
     "start": "npm-run-all --parallel start:**",
     "start:client": "react-scripts start",
-    "start:server": "set PORT=3001&&nodemon ../backend/bin/www",
+    "start:server": "nodemon ../backend/bin/www",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
