--- a/package.json
+++ b/package.json
@@ -13,19 +13,24 @@
     "cors": "^2.8.5",
     "debug": "^4.3.1",
     "express": "^4.17.1",
+    "ffmpeg": "0.0.4",
     "helmet": "^4.5.0",
     "http-errors": "^1.8.0",
     "http-proxy-middleware": "^0.19.1",
     "jade": "^1.11.0",
     "morgan": "^1.10.0",
     "mybatis-mapper": "^0.6.5",
+    "node-rtsp-stream": "0.0.9",
+    "node-rtsp-stream-es6": "^1.0.7",
     "npm-run-all": "^4.1.5",
     "oracledb": "^5.1.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.1.0"
+    "rtsp-ffmpeg": "0.0.15",
+    "web-vitals": "^1.1.0",
+    "ws": "^7.4.5"
   },
   "scripts": {
     "start": "npm-run-all --parallel start:**",
