--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "jade": "^1.11.0",
     "morgan": "^1.10.0",
     "mybatis-mapper": "^0.6.5",
+    "node-media-server": "^2.2.4",
     "node-rtsp-stream": "0.0.9",
     "node-rtsp-stream-es6": "^1.0.7",
     "npm-run-all": "^4.1.5",
