--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "debug": "^4.3.1",
     "express": "^4.17.1",
     "ffmpeg": "0.0.4",
+    "fluent-ffmpeg": "^2.1.2",
     "helmet": "^4.5.0",
     "http-errors": "^1.8.0",
     "http-proxy-middleware": "^0.19.2",
