--- a/package.json
+++ b/package.json
@@ -29,8 +29,10 @@
     "oracledb": "^5.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-draggable": "^4.4.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "recharts": "^2.0.9",
     "rtsp-ffmpeg": "0.0.15",
     "web-vitals": "^1.1.1",
     "ws": "^7.4.5"
