--- a/package.json
+++ b/package.json
@@ -32,10 +32,14 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-draggable": "^4.4.3",
+    "react-hls-player": "^3.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-split-pane": "^2.0.3",
     "recharts": "^2.0.9",
     "rtsp-ffmpeg": "0.0.15",
+    "socket.io": "^4.0.1",
+    "socket.io-client": "^4.0.1",
     "web-vitals": "^1.1.1",
     "ws": "^7.4.5"
   },
