--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.58",
     "@material-ui/styles": "^4.11.4",
+    "@material-ui/x-grid-data-generator": "^4.0.0-alpha.29",
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
@@ -35,6 +36,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-split-pane": "^2.0.3",
+    "react-table": "^7.7.0",
     "recharts": "^2.0.9",
     "socket.io": "^4.1.1",
     "socket.io-client": "^4.1.1",
