--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "http-proxy-middleware": "^0.19.2",
     "jade": "^1.11.0",
     "morgan": "^1.10.0",
+    "multer": "^1.4.2",
     "mybatis-mapper": "^0.6.5",
     "node-media-server": "^2.2.5",
     "npm-run-all": "^4.1.5",
