--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-dom": "^17.0.2",
     "react-draggable": "^4.4.3",
     "react-hls-player": "^3.0.1",
+    "react-player": "^2.9.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-split-pane": "^2.0.3",
@@ -41,6 +42,7 @@
     "recharts": "^2.0.9",
     "socket.io": "^4.1.1",
     "socket.io-client": "^4.1.1",
+    "videojs": "^1.0.0",
     "web-vitals": "^1.1.2",
     "ws": "^7.4.5"
   },
