--- a/package.json
+++ b/package.json
@@ -37,9 +37,11 @@
     "react-player": "^2.9.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-slick": "^0.28.1",
     "react-split-pane": "^2.0.3",
     "react-table": "^7.7.0",
     "recharts": "^2.0.9",
+    "slick-carousel": "^1.8.1",
     "socket.io": "^4.1.1",
     "socket.io-client": "^4.1.1",
     "videojs": "^1.0.0",
