메인화면 수정

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "ffmpeg": "0.0.4",
     "fluent-ffmpeg": "^2.1.2",
     "helmet": "^4.6.0",
+    "hls.js": "^1.0.5",
     "http-errors": "^1.8.0",
     "http-proxy-middleware": "^0.19.2",
     "jade": "^1.11.0",
